<resources>
    <string name="app_name">Conduit</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="article_short_desc">What\'s your article about?(keep it short)</string>
    <string name="article_title">Article Title</string>
    <string name="article_long_desc">Write your Article(in markdown)</string>
    <string name="publish_btn">Publish Article</string>
    <string name="confirm_title_msg">Want to make Changes?</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="update_btn_text">Update</string>
    <string name="delete_btn_text">delete</string>
    <string name="category_text">Motivation</string>
    <string name="category">Please Choose Category</string>
    <string name="user_profile">User Profile</string>
    <string name="add_btn">Add</string>
    <string name="search_icon">Search</string>
    <string name="logout">Logout</string>


    <string-array name="programming_languages">
        <item>Java</item>
        <item>Kotlin</item>
        <item>Python</item>
        <item>CPP</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_pager_string">View pager</string>

</resources>

